src/App.css
.component-container {
  display: flex;
  margin-top: 2em;
}

calcite-label, calcite-dialog, calcite-shell {
  font-family: var(--calcite-sans-family);
}

map-web-component {
  height: 100%;
}



.map-preview {
  width: 50vw;
  max-height: calc(100% - 175px);
}
.list-panel {
  width: 50vw;
  overflow: auto;
  min-height: calc(100% - 70px);
}

.list-panel img {
  max-width: 150px;
}

.pagination-wrapper {
  align-self: center;
  max-width: 100%;
}


calcite-pagination {
  justify-content: center;
}

.dialog-content {
  height: calc(100% - 70px);
}

.search-container {
  display: flex;
  max-height: 100%;
  margin: 1em;
}

@media only screen and (max-width: 767px) {

  .search-container {
    flex-direction: column;
    height: 50vh;
    margin: 0
  }


  .search-container calcite-panel {
    height: 50vh;
  }

  .list-panel {
    width: 100%;
    min-height: calc(50vh - 60px);
  }
  .map-panel {
    min-height: calc(50vh - 60px);
  }

  .list-panel calcite-list {
    max-height: calc(100% - 36px);
    overflow: auto;
    height: calc(100% - 36px);
  }
  

}

.list-panel calcite-list {
  max-height: calc(100vh - 200px);
  overflow: auto;
}

.map-panel {
  height: calc(100vh - 150px);
}

.map-panel arcgis-map {
  max-height: calc(100vh - 200px);
}

.list-panel calcite-pagination {
  min-width: 100%;
}

body, html {
  padding-top: 0 !important;
}

calcite-label {
  margin: 1em;
}

.code-container {
  font-size: smaller;
  margin: 1em;
  height: auto;
}

